--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "gulp-newer": "^1.4.0",
     "gulp-sass": "^4.1.0",
     "gulp-uglify-es": "^2.0.0",
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "normalize.less": "^1.0.0"
   },
   "dependencies": {
     "browser-sync": "^2.26.13"
